Automated Testing Kit 1.0.0-beta1, 2023-06-18
---------------------------------------------
- Initial release.

Automated Testing Kit 1.0.0-beta2, 2023-06-29
---------------------------------------------
Changes since 1.0.0-beta1:
- Added reset password tests (ATK-CY-1030, ATK-PW-1030).
- Added test codes to tags.
- Added resetPasswordUrl to atkConfig.
- In Cypress, switched from execPantheonDrush:remote:drush to ssh tunnel.
- In Cypress, switched to cy.log.