@@ -148,8 +148,8 @@ describe('User registration and login tasks.', () => {
     // Check for registration email at Ethereal.
     const sentArgs = {
       userName: extendedUserName,
-      userEmail: resetAccount.userEmail,
-      userPassword: resetAccount.userPassword,
+      userEmail: userEtherealAccount.userEmail,
+      userPassword: userEtherealAccount.userPassword,
       longUserName: extendedUserName
     }
 
@@ -173,5 +173,64 @@ describe('User registration and login tasks.', () => {
     cy.deleteUserWithEmail(userEtherealAccount.userEmail, [], ['--delete-content'])
   })
 
+  //
+  // Validate Contact us.
+  //
+  it.only("(ATK-CY-1050) Contact Us form accepts input, sends email.", {tags: ['ATK-CY-1050', 'register-login', 'smoke'] }, () => {
+    const uniqueToken = atkUtilities.createRandomString(6)
+    const testId = '(ATK-CY-1050)'
+    const subjectLine = testId + ' ' + uniqueToken
 
+    cy.log("**Fill out contact form.**")
+    cy.visit(atkConfig.contactUsUrl).then(() => {
+      cy.get('#edit-name').type(userEtherealAccount.userName)
+      cy.get('#edit-email').type(userEtherealAccount.userEmail)
+      cy.get('#edit-subject').type(subjectLine)
+      cy.get('#edit-message').type(testId)
+
+      cy.contains('Send message').click()
+    })
+
+    cy.log("**Should see acknowledgement.**")
+    cy.contains('Your message has been sent.')
+
+    // Now check for the entry in the database.
+    // Note that experiencing this problem and clearing isn't working:
+    // https://github.com/cypress-io/cypress/issues/14590
+    Cypress.session.clearSessionStorage
+
+    cy.logOutViaUi()
+
+    cy.logInViaForm(qaUserAccounts.admin)
+
+    cy.visit('admin/structure/webform/manage/contact/results/submissions')
+
+    // Check for presence of random string.
+    // Part A passes: the submission appears.
+    cy.contains(uniqueToken)
+
+    // Check for registration email at Ethereal.
+    const sentArgs = {
+      userName: userEtherealAccount.userName,
+      userEmail: userEtherealAccount.userEmail,
+      userPassword: userEtherealAccount.userPassword,
+      searchSubjectLine: subjectLine
+    }
+
+    cy.origin('https://ethereal.email', { args: sentArgs }, ({ userName, userEmail, userPassword, searchSubjectLine }) => {
+      cy.visit('/login')
+      cy.get('#address').type(userEmail)
+      cy.get('#password').type(userPassword)
+      cy.get('form > :nth-child(5) > .btn').click()
+      cy.contains('Logged in as ' + userEmail)
+
+      cy.visit('/messages', true)
+      cy.contains('Messages for ' + userEmail)
+
+      // Look for "ATK-CY-1050) uniqueToken" generated above.
+      // Part B passes: the email was delivered appears.
+      const subjectValue = searchSubjectLine
+      cy.get('table tr').contains('td', subjectValue)
+    })
+  })
 })
