@@ -28,7 +28,7 @@ test.describe('User registration and login tasks.', () => {
   //
   // Register the Ethereal user and confirm email reaches Ethereal.
   //
-  test('(ATK-PW-1000) Register with form and confirm email with Ethereal. @register-login @alters-db @smoke', async ({ page }) => {
+  test('(ATK-PW-1000) Register with form and confirm email with Ethereal. @ATK-PW-1000 @register-login @alters-db @smoke', async ({ page }) => {
     let textContent = null
 
     // Clean up user in case it exists. Use email because we modify the name
@@ -44,7 +44,6 @@ test.describe('User registration and login tasks.', () => {
     await page.getByRole('button', { name: 'Create new account' }).click()
 
     // Should see the thank-you message.
-    debugger
     textContent = await page.content()
     expect(textContent).toContain('Thank you for applying for an account.')
 
@@ -77,14 +76,14 @@ test.describe('User registration and login tasks.', () => {
   //
   // Log in with the login form into the authenticated account.
   //
-  test('(ATK-PW-1010) Log in via login form. @register-login @smoke', async ({ page, context }) => {
+  test('(ATK-PW-1010) Log in via login form. @ATK-PW-1010 @register-login @smoke', async ({ page, context }) => {
     await atkCommands.logInViaForm(page, context, qaUserAccounts.authenticated)
   })
 
   //
   // Log in with a POST request into the authenticated account.
   //
-  test('(ATK-PW-1011) Log in via POST. @register-login @smoke', async ({ page, context, request }) => {
+  test('(ATK-PW-1011) Log in via POST. @ATK-PW-1011 @register-login @smoke', async ({ page, context, request }) => {
     // TODO: Not ready yet.
     // await atkCommands.logInViaPost(page, context, request, qaUserAccounts.authenticated)
   })
@@ -92,26 +91,136 @@ test.describe('User registration and login tasks.', () => {
   //
   // Log in with a ULI generated by Drupal.
   //
-  test('(ATK-PW-1012) Log in via ULI. @register-login @smoke', async ({ page, context }) => {
+  test('(ATK-PW-1012) Log in via ULI. @ATK-PY-1012 @register-login @smoke', async ({ page, context }) => {
     await atkCommands.logInViaUli(page, context, 1)
   })
 
   //
   // Create a user with Drush from a fixture and delete it.
   //
-  test('(ATK-PW-1020) Create and delete user with Drush. @register-login @smoke', async ({ page }) => {
+  test('(ATK-PW-1020) Create and delete user with Drush. @ATK-PW-1020 @register-login @smoke', async ({ page }) => {
     await atkCommands.deleteUserWithEmail(userEtherealAccount.userEmail, ['--delete-content'])
-    await atkCommands.createUserWithUserObject(userEtherealAccount, ['content_editor'])
+    await atkCommands.createUserWithUserObject(userEtherealAccount, [])
     await atkCommands.deleteUserWithUserName(userEtherealAccount.userName, [], ['--delete-content'])
   })
 
   //
   // Create a user with Drush from a fixture and delete it by UID.
   //
-  test('(ATK-CY-1021) Create user with Drush, delete by UID.  @register-login @smoke', async ({ page }) => {
+  test('(ATK-PW-1021) Create user with Drush, delete by UID.  @ATK-PW-1021 @register-login @smoke', async ({ page }) => {
     await atkCommands.deleteUserWithEmail(userEtherealAccount.userEmail, ['--delete-content'])
-    await atkCommands.createUserWithUserObject(userEtherealAccount, ['content_editor'])
+    await atkCommands.createUserWithUserObject(userEtherealAccount, [])
     const uid = await atkCommands.getUidWithEmail(userEtherealAccount.userEmail)
     await atkCommands.deleteUserWithUid(uid, [], ['--delete-content'])
+  })
+
+  //
+  // Validate reset password function.
+  //
+  test('(ATK-PW-1030) Reset password. @ATK-PW-1030 @register-login @smoke', async ({ page }) => {
+    await atkCommands.deleteUserWithEmail(userEtherealAccount.userEmail, ['--delete-content'])
+
+    // Use random string to identify user in Ethereal.email.
+    const extendedUserName = userEtherealAccount.userName + '-' + atkUtilities.createRandomString(6)
+
+    const resetAccount = {
+      userName: extendedUserName,
+      userEmail: userEtherealAccount.userEmail,
+      userPassword: userEtherealAccount.userPassword,
+      userRoles: []
+    }
+    await atkCommands.createUserWithUserObject(resetAccount, [])
+
+    // Begin registration.
+    await page.goto(atkConfig.resetPasswordUrl)
+
+    await page.getByLabel('Username').fill(extendedUserName)
+    await page.getByRole('button', { name: 'Submit' }).click()
+
+    // Check for tail end of reset message.
+    let textContent = await page.content()
+    expect(textContent).toContain('an email will be sent with instructions to reset your password.')
+
+    // Give the email some time to arrive.
+    await page.waitForTimeout(1000)
+
+    // Check for registration email at Ethereal.
+    const etherealUrl = 'https://ethereal.email'
+    await page.goto(etherealUrl + '/login')
+    await page.getByPlaceholder('Enter email').fill(resetAccount.userEmail)
+    await page.getByPlaceholder('Password').fill(resetAccount.userPassword)
+    await page.getByRole('button', { name: 'Log in' }).click()
+
+    textContent = await page.textContent('body')
+    expect(textContent).toContain('Logged in as ' + userEtherealAccount.userEmail)
+
+    await page.goto(etherealUrl + '/messages')
+
+    textContent = await page.textContent('body')
+    expect(textContent).toContain('Messages for ' + userEtherealAccount.userEmail)
+
+    // There may be two emails, one for the user and one for the admin.
+    // Look for email in the first column and the username + userCode generated above
+    // in the second column; that's the user email.
+    const toValue = 'To: <' + userEtherealAccount.userEmail + '>'
+    const subjectValue = 'Replacement login information for ' + extendedUserName
+    await expect(page.getByRole('row', { name: toValue + ' ' + subjectValue })).toBeVisible
+
+    const uid = await atkCommands.getUidWithEmail(userEtherealAccount.userEmail)
+    await atkCommands.deleteUserWithUid(uid, [], ['--delete-content'])
+  })
+
+
+  //
+  // Validate Contact us.
+  //
+  test('(ATK-PW-1050) Reset password. @ATK-PW-1050 @contact-us @smoke', async ({ page, context }) => {
+    const uniqueToken = atkUtilities.createRandomString(6)
+    const testId = '(ATK-PW-1050)'
+    const subjectLine = testId + ' ' + uniqueToken
+    let textContent = ''
+
+    // Begin registration.
+    await page.goto(atkConfig.contactUsUrl)
+
+    await page.getByLabel('Your name').fill(userEtherealAccount.userName)
+    await page.getByLabel('Your email').fill(userEtherealAccount.userEmail)
+    await page.getByLabel('Subject').fill(subjectLine)
+    await page.getByLabel('Message').fill(testId)
+    await page.getByRole('button', { name: 'Send message' }).click()
+
+    // Should see the thank-you message.
+    textContent = await page.content()
+    expect(textContent).toContain('Your message has been sent.')
+
+    // Now check for the entry in the database.
+    await atkCommands.logOutViaUi(page, context)
+
+    await atkCommands.logInViaForm(page, context, qaUserAccounts.admin)
+
+    await page.goto('admin/structure/webform/manage/contact/results/submissions')
+
+    // Check for presence of random string.
+    // Part A passes: the submission appears.
+    textContent = await page.content()
+    expect(textContent).toContain(uniqueToken)
+
+    // Check for registration email at Ethereal.
+    const etherealUrl = 'https://ethereal.email'
+    await page.goto(etherealUrl + '/login')
+    await page.getByPlaceholder('Enter email').fill(userEtherealAccount.userEmail)
+    await page.getByPlaceholder('Password').fill(userEtherealAccount.userPassword)
+    await page.getByRole('button', { name: 'Log in' }).click()
+
+    textContent = await page.textContent('body')
+    expect(textContent).toContain('Logged in as ' + userEtherealAccount.userEmail)
+
+    await page.goto(etherealUrl + '/messages')
+
+    textContent = await page.textContent('body')
+    expect(textContent).toContain('Messages for ' + userEtherealAccount.userEmail)
+
+    // Look for "ATK-CY-1050) uniqueToken" generated above.
+    await expect(page.getByRole('row', { subject: subjectLine })).toBeVisible
   })
 })
